--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Deepak Rajendran Portfolio</title>
     <link href="/src/index.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LY1YCT6E48"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LY1YCT6E48');
+    </script>
   </head>
   <body>
     <div id="root"></div>
