--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
       gtag('config', 'G-LY1YCT6E48');
     </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
